--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@ p {
 
 .math {
     font-family: monospace;
-    font-size: 1.1em;
-    padding: 1px 4px;
+    font-size: 1.05em;
+    padding: 1px 3px;
     background-color: #f0f0f0;
+    font-weight: 600;
 }
 
 .graph {
