--- a/style.css
+++ b/style.css
@@ -10,13 +10,17 @@ body {
 
 h1 {
     text-align: center;
-    margin: 1em auto 1em;
-    line-height:1.1;
-    font-size: 3em;
-    font-weight: 600;
-    border-bottom: 2px solid #666;
+    margin: 2em auto 1em;
+    line-height: 1.1;
     color: #333;
-    padding: 4px;
+}
+
+hr {
+    background-color: #999;
+    border: none;
+    height: 1px;
+    max-width: 240px;
+    margin: 0 auto 1em;
 }
 
 h2 {
@@ -24,16 +28,21 @@ h2 {
     font-size: 1.2em;
 }
 
+
+
 p {
     margin: .5em 0 1em;
 }
 
 .math {
+    display: inline-block;
     font-family: monospace;
-    font-size: 1.05em;
-    padding: 1px 3px;
+    font-size: 1.205em;
+    padding: 8px 12px;
+    margin-top: 4px;
     background-color: #f0f0f0;
     font-weight: 600;
+    border-radius: 4px;
 }
 
 .graph {
