--- a/style.css
+++ b/style.css
@@ -1,34 +1,45 @@
 body {
     font-family: 'Segoe UI', sans-serif;
     margin: 16px;
-}
-
-.main {
-    max-width: 768px;
-    margin: 0 auto 128px;
+    background-color: #f5f5f5;
 }
 
 h1 {
     text-align: center;
-    margin: 2em auto 1em;
+    margin: 1em auto .6em;
+    line-height: 1.1;
+    color: #006afc;
+    font-size: 2.5em;
+}
+
+.gbm-image {
+    display: block;
+    margin: 0 auto -2em;
+    width: 100%;
+    max-width: 320px;
+    box-sizing: border-box;
+    padding: 2px;
+    background-color: #fff;
+    border-radius: 4px;
+}
+
+.content {
+    max-width: 768px;
+    margin: 0 auto 128px;
+}
+
+h2 {
+    margin: 2em 0 0;
+    font-size: 1.6em;
     line-height: 1.1;
     color: #333;
 }
 
-hr {
-    background-color: #999;
-    border: none;
-    height: 1px;
-    max-width: 240px;
-    margin: 0 auto 1em;
+h3 {
+    font-size: 1em;
+    margin-bottom: 0;
+    font-style: italic;
 }
-
-h2 {
-    margin: 2.2em 0 0;
-    font-size: 1.2em;
-}
-
-
 
 p {
     margin: .5em 0 1em;
@@ -39,12 +50,43 @@ p {
     font-family: monospace;
     font-size: 1.205em;
     padding: 8px 12px;
-    margin-top: 4px;
-    background-color: #f0f0f0;
+    margin-top: 10px;
+    background-color: rgba(0, 0, 0, .06);
     font-weight: 600;
     border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, .1);
 }
 
 .graph {
-    margin: 1em auto 2em;
+    margin: 1em auto .8em;
+    background-color: #fff;
+    padding: 8px 16px 2px;
+    border-radius: 4px;
+}
+
+button {
+    background-color: #fff;
+    background-color: #1d77f4;
+    color: #fff;
+    border: none;
+    padding: 8px 14px;
+    display: flex;
+    justify-content: center;
+    gap: .6em;
+    margin: 0 auto;
+    cursor: pointer;
+    border-radius: 2em;
+    font: inherit;
+    font-size: .8em;
+}
+
+button svg {
+    height: 1.3em;
+    pointer-events: none;
+}
+
+button span {
+    pointer-events: none;
+    line-height: 1.3;
+    font-weight: 600;
 }
