--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Segoe UI', sans-serif;
     margin: 16px;
     background-color: #f5f5f5;
+    font-size: 18px;
 }
 
 h1 {
@@ -14,7 +15,7 @@ h1 {
 
 .gbm-image {
     display: block;
-    margin: 0 auto -2em;
+    margin: 0 auto -1em;
     width: 100%;
     max-width: 320px;
     box-sizing: border-box;
@@ -32,7 +33,7 @@ h2 {
     margin: 2em 0 0;
     font-size: 1.6em;
     line-height: 1.1;
-    color: #333;
+    color: #444;
 }
 
 h3 {
@@ -48,7 +49,7 @@ p {
 .math {
     display: inline-block;
     font-family: monospace;
-    font-size: 1.205em;
+    font-size: .9em;
     padding: 8px 12px;
     margin-top: 10px;
     background-color: rgba(0, 0, 0, .06);
